third_party/flutter_litert/lib/src/bindings/tensorflow_lite_bindings_generated.dart


  late final _TfLiteInterpreterInputTensorIndicesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Int> Function(ffi.Pointer<TfLiteInterpreter>)
        >
      >('TfLiteInterpreterInputTensorIndices');
  late final _TfLiteInterpreterInputTensorIndices =
      _TfLiteInterpreterInputTensorIndicesPtr.asFunction<
        ffi.Pointer<ffi.Int> Function(ffi.Pointer<TfLiteInterpreter>)
      >();

  /// Returns the tensor associated with the input index.
  /// REQUIRES: 0 <= input_index < TfLiteInterpreterGetInputTensorCount(tensor)
  ffi.Pointer<TfLiteTensor> TfLiteInterpreterGetInputTensor(
    ffi.Pointer<TfLiteInterpreter> interpreter,
    int input_index,
  ) {
    return _TfLiteInterpreterGetInputTensor(interpreter, input_index);
  }

  late final _TfLiteInterpreterGetInputTensorPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<TfLiteTensor> Function(
            ffi.Pointer<TfLiteInterpreter>,
            ffi.Int32,
          )
        >
      >('TfLiteInterpreterGetInputTensor');
  late final _TfLiteInterpreterGetInputTensor =
      _TfLiteInterpreterGetInputTensorPtr.asFunction<
        ffi.Pointer<TfLiteTensor> Function(ffi.Pointer<TfLiteInterpreter>, int)
      >();

  /// Resizes the specified input tensor.
  ///
  /// \note After a resize, the client *must* explicitly allocate tensors before
  /// attempting to access the resized tensor data or invoke the interpreter.
  ///
  /// REQUIRES: 0 <= input_index < TfLiteInterpreterGetInputTensorCount(tensor)
  ///
  /// This function makes a copy of the input dimensions, so the client can safely
  /// deallocate `input_dims` immediately after this function returns.
  int TfLiteInterpreterResizeInputTensor(
    ffi.Pointer<TfLiteInterpreter> interpreter,
    int input_index,
    ffi.Pointer<ffi.Int> input_dims,
    int input_dims_size,
  ) {
    return _TfLiteInterpreterResizeInputTensor(
      interpreter,
      input_index,
      input_dims,
      input_dims_size,
    );
  }

  late final _TfLiteInterpreterResizeInputTensorPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<TfLiteInterpreter>,
            ffi.Int32,
            ffi.Pointer<ffi.Int>,
            ffi.Int32,
          )
        >
      >('TfLiteInterpreterResizeInputTensor');
  late final _TfLiteInterpreterResizeInputTensor =
      _TfLiteInterpreterResizeInputTensorPtr.asFunction<
        int Function(
          ffi.Pointer<TfLiteInterpreter>,
          int,
          ffi.Pointer<ffi.Int>,
          int,
        )
      >();

  /// Updates allocations for all tensors, resizing dependent tensors using the
  /// specified input tensor dimensionality.
  ///
  /// This is a relatively expensive operation, and need only be called after
  /// creating the graph and/or resizing any inputs.
  int TfLiteInterpreterAllocateTensors(
    ffi.Pointer<TfLiteInterpreter> interpreter,
  ) {
    return _TfLiteInterpreterAllocateTensors(interpreter);
  }

  late final _TfLiteInterpreterAllocateTensorsPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<TfLiteInterpreter>)>
      >('TfLiteInterpreterAllocateTensors');
  late final _TfLiteInterpreterAllocateTensors =
      _TfLiteInterpreterAllocateTensorsPtr.asFunction<
        int Function(ffi.Pointer<TfLiteInterpreter>)
      >();

  /// Runs inference for the loaded graph.
  ///
  /// Before calling this function, the caller should first invoke
  /// TfLiteInterpreterAllocateTensors() and should also set the values for the
  /// input tensors.  After successfully calling this function, the values for the
  /// output tensors will be set.
  ///
  /// \note It is possible that the interpreter is not in a ready state to
  /// evaluate (e.g., if AllocateTensors() hasn't been called, or if a
  /// ResizeInputTensor() has been performed without a subsequent call to
  /// AllocateTensors()).
  ///
  /// If the (experimental!) delegate fallback option was enabled in the
  /// interpreter options, then the interpreter will automatically fall back to
  /// not using any delegates if execution with delegates fails. For details,
  /// see TfLiteInterpreterOptionsSetEnableDelegateFallback in
  /// c_api_experimental.h.
  ///
  /// Returns one of the following status codes:
  /// - kTfLiteOk: Success. Output is valid.
  /// - kTfLiteDelegateError: Execution with delegates failed, due to a problem
  /// with the delegate(s). If fallback was not enabled, output is invalid.
  /// If fallback was enabled, this return value indicates that fallback
  /// succeeded, the output is valid, and all delegates previously applied to
  /// the interpreter have been undone.
  /// - kTfLiteApplicationError: Same as for kTfLiteDelegateError, except that
  /// the problem was not with the delegate itself, but rather was
  /// due to an incompatibility between the delegate(s) and the
  /// interpreter or model.
  /// - kTfLiteError: Unexpected/runtime failure. Output is invalid.
  int TfLiteInterpreterInvoke(ffi.Pointer<TfLiteInterpreter> interpreter) {
    return _TfLiteInterpreterInvoke(interpreter);
  }

  late final _TfLiteInterpreterInvokePtr =
      _lookup<
        ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<TfLiteInterpreter>)>
      >('TfLiteInterpreterInvoke');
  late final _TfLiteInterpreterInvoke =
      _TfLiteInterpreterInvokePtr.asFunction<
        int Function(ffi.Pointer<TfLiteInterpreter>)
      >();

  /// Returns the number of output tensors associated with the model.
  int TfLiteInterpreterGetOutputTensorCount(
    ffi.Pointer<TfLiteInterpreter> interpreter,
  ) {
    return _TfLiteInterpreterGetOutputTensorCount(interpreter);
  }

  late final _TfLiteInterpreterGetOutputTensorCountPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<TfLiteInterpreter>)>
      >('TfLiteInterpreterGetOutputTensorCount');
  late final _TfLiteInterpreterGetOutputTensorCount =
      _TfLiteInterpreterGetOutputTensorCountPtr.asFunction<
        int Function(ffi.Pointer<TfLiteInterpreter>)
      >();

  /// Returns a pointer to an array of output tensor indices.  The length of the
  /// array can be obtained via a call to `TfLiteInterpreterGetOutputTensorCount`.
  ///
  /// Typically the output tensors associated with an `interpreter` would be set
  /// during the initialization of the `interpreter`, through a mechanism like the
  /// `InterpreterBuilder`, and remain unchanged throughout the lifetime of the
  /// interpreter.  However, there are some circumstances in which the pointer may
  /// not remain valid throughout the lifetime of the interpreter, because calls
  /// to `SetOutputs` on the interpreter invalidate the returned pointer.
  ///
  /// The ownership of the array remains with the TFLite runtime.
  ffi.Pointer<ffi.Int> TfLiteInterpreterOutputTensorIndices(
    ffi.Pointer<TfLiteInterpreter> interpreter,
  ) {
    return _TfLiteInterpreterOutputTensorIndices(interpreter);
  }

  late final _TfLiteInterpreterOutputTensorIndicesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Int> Function(ffi.Pointer<TfLiteInterpreter>)
        >
      >('TfLiteInterpreterOutputTensorIndices');
  late final _TfLiteInterpreterOutputTensorIndices =
      _TfLiteInterpreterOutputTensorIndicesPtr.asFunction<
        ffi.Pointer<ffi.Int> Function(ffi.Pointer<TfLiteInterpreter>)
      >();

  /// Returns the tensor associated with the output index.
  /// REQUIRES: 0 <= output_index < TfLiteInterpreterGetOutputTensorCount(tensor)
  ///
  /// \note The shape and underlying data buffer for output tensors may be not
  /// be available until after the output tensor has been both sized and
  /// allocated.
  /// In general, best practice is to interact with the output tensor *after*
  /// calling TfLiteInterpreterInvoke().
  ffi.Pointer<TfLiteTensor> TfLiteInterpreterGetOutputTensor(
    ffi.Pointer<TfLiteInterpreter> interpreter,
    int output_index,
  ) {
    return _TfLiteInterpreterGetOutputTensor(interpreter, output_index);
  }

  late final _TfLiteInterpreterGetOutputTensorPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<TfLiteTensor> Function(
            ffi.Pointer<TfLiteInterpreter>,
            ffi.Int32,
          )
        >
      >('TfLiteInterpreterGetOutputTensor');
  late final _TfLiteInterpreterGetOutputTensor =
      _TfLiteInterpreterGetOutputTensorPtr.asFunction<
        ffi.Pointer<TfLiteTensor> Function(ffi.Pointer<TfLiteInterpreter>, int)
      >();

  /// Returns modifiable access to the tensor that corresponds to the
  /// specified `index` and is associated with the provided `interpreter`.
  ///
  /// This requires the `index` to be between 0 and N - 1, where N is the
  /// number of tensors in the model.
  ///
  /// Typically the tensors associated with the `interpreter` would be set during
  /// the `interpreter` initialization, through a mechanism like the
  /// `InterpreterBuilder`, and remain unchanged throughout the lifetime of the
  /// interpreter.  However, there are some circumstances in which the pointer may
  /// not remain valid throughout the lifetime of the interpreter, because calls
  /// to `AddTensors` on the interpreter invalidate the returned pointer.
  ///
  /// Note the difference between this function and
  /// `TfLiteInterpreterGetInputTensor` (or `TfLiteInterpreterGetOutputTensor` for
  /// that matter): `TfLiteInterpreterGetTensor` takes an index into the array of
  /// all tensors associated with the `interpreter`'s model, whereas
  /// `TfLiteInterpreterGetInputTensor` takes an index into the array of input
  /// tensors.
  ///
  /// The ownership of the tensor remains with the TFLite runtime, meaning the
  /// caller should not deallocate the pointer.
  ffi.Pointer<TfLiteTensor> TfLiteInterpreterGetTensor(
    ffi.Pointer<TfLiteInterpreter> interpreter,
    int index,
  ) {
    return _TfLiteInterpreterGetTensor(interpreter, index);
  }

  late final _TfLiteInterpreterGetTensorPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<TfLiteTensor> Function(
            ffi.Pointer<TfLiteInterpreter>,
            ffi.Int,
          )
        >
      >('TfLiteInterpreterGetTensor');
  late final _TfLiteInterpreterGetTensor =
      _TfLiteInterpreterGetTensorPtr.asFunction<
        ffi.Pointer<TfLiteTensor> Function(ffi.Pointer<TfLiteInterpreter>, int)
      >();

  /// Tries to cancel any in-flight invocation.
  ///
  /// \note This only cancels `TfLiteInterpreterInvoke` calls that happen before
  /// calling this and it does not cancel subsequent invocations.
  /// \note Calling this function will also cancel any in-flight invocations of
  /// SignatureRunners constructed from this interpreter.
  /// Non-blocking and thread safe.
  ///
  /// Returns kTfLiteError if cancellation is not enabled via
  /// `TfLiteInterpreterOptionsEnableCancellation`.
  int TfLiteInterpreterCancel(ffi.Pointer<TfLiteInterpreter> interpreter) {
    return _TfLiteInterpreterCancel(interpreter);
  }

  late final _TfLiteInterpreterCancelPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<TfLiteInterpreter>)>
      >('TfLiteInterpreterCancel');
  late final _TfLiteInterpreterCancel =
      _TfLiteInterpreterCancelPtr.asFunction<
        int Function(ffi.Pointer<TfLiteInterpreter>)
      >();

  /// Returns the number of signatures defined in the model.
  int TfLiteInterpreterGetSignatureCount(
    ffi.Pointer<TfLiteInterpreter> interpreter,
  ) {
    return _TfLiteInterpreterGetSignatureCount(interpreter);
  }

  late final _TfLiteInterpreterGetSignatureCountPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<TfLiteInterpreter>)>
      >('TfLiteInterpreterGetSignatureCount');
  late final _TfLiteInterpreterGetSignatureCount =
      _TfLiteInterpreterGetSignatureCountPtr.asFunction<
        int Function(ffi.Pointer<TfLiteInterpreter>)
      >();
